screenshot cropping fixed

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -671,4 +671,5 @@ textarea {
     visibility:hidden;
 }
 
-
+#simplemodal-overlay {background-color:#000;}
+#simplemodal-container {margin: auto;}
